2515 [OneClick]             improved handling of track information in case no language information is available (regression of 2512). Part II
2514 [OneClick]             improved handling of track information in case no language information is available (regression of 2512)
2513 [Update]               removed update server megui.xvidvideo.ru completly
     [Update]               increased update data refresh interval to 2 days for the development server
2512 [OneClick]             better support for Blu-ray playlist where eac3to and mediainfo report different track information
2511 [Chapter Creator]      improved error handling
2510 [VobSubber]            improved error handling
2509 [OneClick]             fixed removing the wrong subtitle track when using the DEL key
2508 [x265]                 adjusted command line for recent avs4x265

Changelog 2501 --> 2507

Features/Changes:
[Update]               removed update server megui.xvidvideo.ru for the stable branch as it cannot be synced anymore
[Update]               increased update data refresh interval to 10 days for the stable server

Enhancements/Fixes:
[Adaptive Muxer]       fixed first subtitle unintended set to default. Bug #774
[Audio Encoder]        fixed wrong channel count mismatch warning for AVS files. Bug #767
[Chapter Creator]      improved multi angle Blu-Ray support
[L-SMASH Indexer]      the cache file was sometimes not deleted
[Update]               fixed freeze when adding new custom update servers. Bug #769
[Update]               improved runtime copying process


Changelog 2419 --> 2500

Features/Changes:
[Update]               several changes have been made to save bandwidth during the update process:
[Update]               - update data will only be refreshed every 1 (development) or 5 (stable) days
[Update]               - all optional packages are disabled by default
[Update]               - optional packages will only be downloaded/enabled if needed